--- a/perso_account/views/account_view_budget.xml
+++ b/perso_account/views/account_view_budget.xml
@@ -12,13 +12,12 @@
         <field name="name">perso.account.tree</field>
         <field name="model">perso.account</field>
         <field name="arch" type="xml">
-            <tree string="Account"
-                colors="black:consolidated_budget == 0;red:consolidated_amount &lt; consolidated_budget;green:consolidated_amount &gt; consolidated_budget;">
-                <!-- <field name="id" /> -->
+            <tree string="Account">
                 <field name="number" />
                 <field name="name" />
-                <field name="consolidated_budget" />
-                <field name="budget" sum="Total"/>
+                <field name="remaining_budget" sum="Total" />
+                <field name="consolidated_budget" sum="Total" />
+                <field name="budget" />
                 <field name="consolidated_amount" sum="Total" />
                 <field name="previous_consolidated_amount" sum="Total" />
                 <field name="past_year_mean_consolidated_amount" sum="Total" />
