[IMP] Decimal separator is now a field for import, you can choose it for fortis. Infer the thousands separator from the decimal separator

--- a/perso_account/wizard/import_fortis.xml
+++ b/perso_account/wizard/import_fortis.xml
@@ -10,6 +10,7 @@
                 	 <h1><field name="name" readonly="1" /></h1>
                 	</div>
                 	<group>
+                        <field name="decimal_separator" />
 	                	<field name="file_to_import" string="Select file to import"/>
                 	
                 	</group>
