[ADD]Budget per period

--- a/perso_account/views/account_view.xml
+++ b/perso_account/views/account_view.xml
@@ -61,6 +61,14 @@
                                 </tree>
                             </field>
                         </page>
+                        <page string="Budget">
+                            <field name="budget_line_ids">
+                                <tree>
+                                    <field name="period_id" />
+                                    <field name="amount" />
+                                </tree>
+                            </field>
+                        </page>
                         <page string="Description">
                             <field name="description" />
                         </page>
